Fixed stuff
border-img class was added in. The tabs not showing everything on small screen is now fixed.

--- a/css/brief.css
+++ b/css/brief.css
@@ -140,6 +140,11 @@ canvas {
     transition: .7s ease-in-out;
 }
 
+.border-img {
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+
 .header-text-g {
     font: 100 7em Lato;
     color: #FFF;
